--- a/index.html
+++ b/index.html
@@ -1,20 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Document</title>
+    <title>Poder Judicial SSJ</title>
 </head>
+
 <body>
     <nav class="nav-container">
-        <img src="assets/logo.png" alt="">
-        <h3>Poder Judicial de la provincia de Jujuy</h3>
-        <ul>
-            <li>Inicio</li>
-            <li>Institucional</li>
-            <li>Dependencias</li>
-        </ul>
+        <div class="header-container">
+            <img class="img-logo" src="assets/logo.png" alt="">
+            <h3>Poder Judicial de la Provincia de Jujuy</h3>
+            <ul class="nav-list">
+                <li>Inicio</li>
+                <li>Institucional</li>
+                <li>Dependencias</li>
+                <li>Noticias</li>
+                <li>Informacion</li>
+                <li>Servicios</li>
+            </ul>
+        </div>
+
+
     </nav>
+    <section class="main-container">
+        <div class="text-container">
+            <h1>Plataforma de Gestion Digital</h1>
+            <h3>Expediente Electronico del Poder Judicial de Jujuy</h3>
+            <a href="contactForm.html">
+                <h1 class="contact-form-button">Formulario de contacto</h1>
+            </a>
+
+
+        </div>
+
+        <div clase="list-container">
+            <ul class="list-menu">
+                <li class="list-item">ACORDADAS Y NORMATIVA</li>
+                <li class="list-item">INSTRUCTIVOS Y TUTORIALES</li>
+                <li class="list-item">REGISTROS Y ADHESION AL SERVICIO</li>
+            </ul>
+        </div>
+        <div class="cards-container">
+            <div class="card">Profesionales</div>
+            <div class="card">Auxiliares</div>
+            <div class="card">Organismos externos</div>
+            <div class="card">Dependencias Judiciales</div>
+            <div class="card">Ministerio de seguridad</div>
+            <div class="card">Otros servicios</div>
+        </div>
+    </section>
 </body>
+
 </html>
