--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
             <img class="img-logo" src="assets/logo.png" alt="">
             <h3>Poder Judicial de la Provincia de Jujuy</h3>
             <ul class="nav-list">
-                <li>Inicio</li>
-                <li>Institucional</li>
-                <li>Dependencias</li>
-                <li>Noticias</li>
-                <li>Informacion</li>
-                <li>Servicios</li>
+                <li class="list-navItem">Inicio</li>
+                <li class="list-navItem">Institucional</li>
+                <li class="list-navItem">Dependencias</li>
+                <li class="list-navItem">Noticias</li>
+                <li class="list-navItem">Informacion</li>
+                <li class="list-navItem">Servicios</li>
             </ul>
         </div>
 
